--- a/style.css
+++ b/style.css
@@ -1,70 +1,75 @@
-$grey: #696969;
-$whitesmoke: #F5F5F5;
-$gainsboro: #DCDCDC;
-$oldlace: #FDF5E6;
-$papaya: #FFEFD5;
 body {
-  background-color: $oldlace;
+  background-color: #FDF5E6;
   font-family: Arial;
-  color: $grey; 
+  color: #696969;
   margin-top: 30px;
 }
+
 #main {
-  text-align: center; 
+  text-align: center;
   background-size: auto;
-  background-color: $papaya;
+  background-color: #FFEFD5;
 }
+
 #title {
   font-weight: bold;
   font-size: 55px;
   margin-top: 30px;
 }
+
 h2 {
   font-size: 20px;
   font-style: italic;
   line-height: 30px;
 }
+
 #img-div {
   background-size: content;
-  background-color: $oldlace;
-  border: 5px solid $papaya;
-  border-left: 40px solid $papaya;
-  border-right: 40px solid $papaya;
+  background-color: #FDF5E6;
+  border: 5px solid #FFEFD5;
+  border-left: 40px solid #FFEFD5;
+  border-right: 40px solid #FFEFD5;
   border-radius: 3%;
- 
 }
+
 #image {
   max-width: 100%;
   height: auto;
   margin: auto;
 }
+
 #img-caption {
   font-size: 15px;
   text-align: center;
   font-style: italic;
-}  
-p{
+}
+
+p {
   text-align: center;
   font-size: 20px;
   line-height: 30px;
 }
-#timeline{
+
+#timeline {
   font-size: 25px;
   margin-bottom: 50px;
 }
-#tribute-info{
+
+#tribute-info {
   font-size: 17px;
   margin-left: 30px;
   margin-right: 50px;
   text-align: justify;
   line-height: 25px;
 }
+
 blockquote {
   font-size: 20px;
   margin-left: 70px;
 }
+
 hr {
-  color: $grey;
+  color: #696969;
   margin-left: 100px;
   margin-right: 100px;
 }
